@@ -8,6 +8,7 @@
 	
 	* generic/tclCompExpr.c: Fix literal leak in exprs [Bug 1869989] 
 	* generic/tclExecute.c:  (dgp)
+	* tests/compExpr.test:
 	
 	* doc/proc.n: changed wording for access to non-local variables;
 	added mention to [namespace upvar]. Lame attempt at dealing with
